[package]
    name                   = "treblle-actix"
    description            = "Treblle integration for Actix web framework"
    include                = ["/src"]
    authors.workspace      = true
    edition.workspace      = true
    homepage.workspace     = true
    license.workspace      = true
    repository.workspace   = true
    rust-version.workspace = true
    version.workspace      = true

[lints]
    workspace = true

[dependencies]
    treblle-core = { workspace = true, default-features = true }
    actix-http   = "3.9"
    actix-web    = { version = "4.9.0", features = ["macros"] }

    bytes            = "1.7.2"
    chrono           = { workspace = true }
    futures-util     = "0.3.31"
    http             = { workspace = true }
    local-ip-address = { workspace = true }
    os_info          = { workspace = true }
    serde            = { workspace = true, features = ["derive"] }
    serde_json       = { workspace = true }
    time             = { workspace = true, features = ["local-offset"] }
    tracing          = { workspace = true }
