[package]
    name                 = "treblle-axum"
    description          = "Treblle integration for Axum web framework"
    include = ["/src"]
    version.workspace    = true
    edition.workspace    = true
    authors.workspace    = true
    license.workspace    = true
    repository.workspace = true
    homepage.workspace   = true
    rust-version.workspace = true

[lints]
    workspace = true

[dependencies]
    treblle-core = { workspace = true }
    axum         = "0.7"
    hyper        = "1.0"
    tower        = "0.5.1"
    futures      = "0.3"
    reqwest      = { version = "0.12.8", features = ["json"] }
    tokio        = { version = "1.0", features = ["rt", "time"] }
    log          = "0.4"
chrono = "0.4.38"
serde = { version = "1.0.210", features = ["derive"] }