[package]
    name                 = "treblle-axum"
    description          = "Treblle integration for Axum web framework"
    include = ["/src"]
    version.workspace    = true
    edition.workspace    = true
    authors.workspace    = true
    license.workspace    = true
    repository.workspace = true
    homepage.workspace   = true
    rust-version.workspace = true

[lints]
    workspace = true

[dependencies]
    treblle-core = { workspace = true }
    axum = { version = "0.7", features = ["http1"] }
    hyper = { version = "1.5.0", features = ["full"] }
    hyper-util = { version = "0.1", features = ["full"] }
    tower = { version = "0.5.1", features = ["util"] }
    futures = "0.3"
    tokio = { workspace = true }
    tracing = { workspace = true, features = ["log"] }
    tracing-subscriber = { workspace = true, features = ["env-filter"] }
    chrono = { version = "0.4", features = ["serde"] }
    serde = { workspace = true }
    serde_json = { workspace = true }
    bytes = "1.0"


[dev-dependencies]
    tokio-test = "0.4"
    http-body-util = "0.1"
    tower-http = { version = "0.6.1", features = ["trace", "timeout"] }
    http = "1.1.0"