[package]
    name                   = "treblle-axum"
    description            = "Treblle integration for Axum web framework"
    include                = ["/src"]
    authors.workspace      = true
    categories.workspace   = true
    edition.workspace      = true
    homepage.workspace     = true
    keywords.workspace     = true
    license.workspace      = true
    repository.workspace   = true
    rust-version.workspace = true
    version.workspace      = true

[lints]
    workspace = true

[dependencies]
    treblle-core = { workspace = true, default-features = true }
    axum         = { version = "0.7", features = ["http1"] }

    bytes            = "1.0"
    chrono           = { version = "0.4", features = ["serde"] }
    hyper            = { version = "1.5.0", features = ["full"] }
    http             = { workspace = true }
    local-ip-address = { workspace = true }
    os_info          = { workspace = true }
    serde            = { workspace = true }
    serde_json       = { workspace = true }
    time             = { workspace = true, features = ["local-offset"] }
    tokio            = { workspace = true }
    tower            = { version = "0.5.1", features = ["util"] }
    tracing          = { workspace = true, features = ["log"] }


[dev-dependencies]
    http-body-util = "0.1"
    tokio-test     = "0.4"
    tower-http     = { version = "0.6.1", features = ["trace", "timeout"] }
