[package]
    name                   = "treblle-core"
    description            = "Core functionality for Treblle Rust integrations"
    include                = ["/src"]
    authors.workspace      = true
    edition.workspace      = true
    homepage.workspace     = true
    license.workspace      = true
    repository.workspace   = true
    rust-version.workspace = true
    version.workspace      = true

[lints]
    workspace = true

[features]
    default     = ["http_client"]
    http_client = ["reqwest", "tokio"]
    wasm        = []

[dependencies]
    serde      = { workspace = true }
    serde_json = { workspace = true }
    chrono     = { version = "0.4", features = ["serde"] }
    regex      = "1.5"
    thiserror  = "1.0"
    http       = "1.1.0"
    rustls     = "0.23.14"

    # Optional dependencies based on features
    reqwest = { version = "0.12.8", features = ["json"], optional = true }
    tokio   = { workspace = true, optional = true }

[dev-dependencies]
    wiremock = "0.6.2"
