[package]
    name                   = "treblle-rocket"
    description            = "Treblle integration for Rocket web framework"
    include                = ["/src"]
    version.workspace      = true
    edition.workspace      = true
    authors.workspace      = true
    license.workspace      = true
    repository.workspace   = true
    homepage.workspace     = true
    rust-version.workspace = true

[lints]
    workspace = true

[dependencies]
    treblle-core = { workspace = true }
    rocket       = { version = "0.5", features = ["json"] }
    futures      = "0.3"
    reqwest      = { version = "0.12.9", features = ["json"] }
    tokio        = { workspace = true, features = ["rt", "time"] }
    tracing      = { workspace = true }
    serde        = { workspace = true }
    serde_json   = { workspace = true }
    bytes        = "1.7.2"
    chrono       = "0.4.38"
    http = "1.1.0"
    time = { version = "0.3.36", features = ["local-offset"] }
    local-ip-address = "0.6.3"
    os_info = "3.7"
