[package]
    name                   = "treblle-rocket"
    description            = "Treblle integration for Rocket web framework"
    include                = ["/src"]
    authors.workspace      = true
    categories.workspace   = true
    edition.workspace      = true
    homepage.workspace     = true
    keywords.workspace     = true
    license.workspace      = true
    repository.workspace   = true
    rust-version.workspace = true
    version.workspace      = true

[lints]
    workspace = true

[dependencies]
    treblle-core = { workspace = true, default-features = true }
    rocket       = { version = "0.5", features = ["json"] }

    chrono           = { workspace = true }
    http             = { workspace = true }
    local-ip-address = { workspace = true }
    os_info          = { workspace = true }
    serde            = { workspace = true }
    serde_json       = { workspace = true }
    time             = { workspace = true, features = ["local-offset"] }
    tokio            = { workspace = true, features = ["rt", "time"] }
    tracing          = { workspace = true }
