[package]
    name                   = "treblle-traefik-wasm"
    description            = "Treblle Traefik WASM middleware for API monitoring and logging"
    include                = ["/src"]
    authors.workspace      = true
    categories.workspace   = true
    edition.workspace      = true
    homepage.workspace     = true
    keywords.workspace     = true
    license.workspace      = true
    repository.workspace   = true
    rust-version.workspace = true
    version.workspace      = true

[lints]
    workspace = true

[lib]
    crate-type = ["cdylib"]

[features]
    default = ["wasm"]
    wasm    = ["treblle-core/wasm", "wasmedge_wasi_socket", "rustls"]

[dependencies]
    treblle-core = { workspace = true, features = ["wasm"] }
    wit-bindgen-rt = { version = "0.33.0", features = [
        "bitflags",
    ], default-features = false }

    http       = { workspace = true }
    chrono     = { workspace = true }
    serde      = { workspace = true }
    serde_json = { workspace = true }
    thiserror  = { version = "1.0", default-features = false }
    once_cell  = "1.19.0"

    # WASM-specific dependencies
    wasmedge_wasi_socket = { version = "0.5.5", optional = true }
    rustls = { version = "0.21", default-features = false, features = [
        "dangerous_configuration",
        "tls12",
    ], optional = true }
    webpki-roots = { version = "0.25", default-features = false }
    url = "2.5.2"
    rustls-pemfile = "2.2.0"
    lazy_static = "1.5.0"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
    ring = { version = "0.17.8", default-features = false, features = [
        "less-safe-getrandom-custom-or-rdrand",
    ] }
