[package]
    name = "treblle-axum-test-service"
    version.workspace    = true
    edition.workspace    = true
    authors.workspace    = true
    license.workspace    = true
    repository.workspace = true
    homepage.workspace   = true
    rust-version.workspace = true
    publish = false  # Don't publish test services to crates.io

[dependencies]
    treblle-core = { workspace = true }
    treblle-axum = { path = "../../treblle-axum" }
    serde = { workspace = true }
    serde_json = { workspace = true }
    tokio = { workspace = true }
    tracing = { workspace = true }
    tracing-subscriber = { workspace = true }

    # Axum dependencies
    axum = "0.7"
    tower = "0.5"
    tower-http = { version = "0.6", features = ["trace"] }
    hyper = { version = "1.0", features = ["full"] }

    # Additional testing dependencies
    metrics = "0.24.0"
    metrics-exporter-prometheus = "0.16.0"
    rand = "0.8"
    chrono = { version = "0.4", features = ["serde"] }